# pluribus

./: .gitignore  .gitmodules  CMakeLists.txt  clustering_blueprint.sh  clustering_real_time.sh  install.sh  pluribus_wandb.sh
benchmark/: benchmark.cpp  benchmark_mccfr.cpp
convert/: convert.cpp
hand_isomorphism/: hand_index.c
java/KMedoids/: .gitignore
java/KMedoids/src/: BufferDistance.java  Main.java  RowStripeMapper.java
notes/: detection.md
omp/: Hand.h
pluribus/: CMakeLists.txt  actions.cpp  actions.hpp  agent.cpp  agent.hpp  blueprint.cpp  blueprint.hpp  calc.cpp  calc.hpp  cereal_ext.hpp  cluster.cpp  cluster.hpp  concurrency.hpp  config.cpp  config.hpp  constants.hpp  debug.cpp  debug.hpp  decision.cpp  decision.hpp  dist.cpp  dist.hpp  earth_movers_dist.cpp  earth_movers_dist.hpp  ev.cpp  ev.hpp  history_index.cpp  history_index.hpp  indexing.cpp  indexing.hpp  infoset.cpp  infoset.hpp  logging.cpp  logging.hpp  main.cpp  mccfr.cpp  mccfr.hpp  mccfr_tree.hpp  pluribus.cpp  pluribus.hpp  (+26 more)
python/: inspect.py  k_means.py  requirements.txt
python/client/: .gitattributes  .gitignore  client.py  config.py  gui.py  input_client.py  interface.py  manager.py  ocr.py  requirements.txt  screenshot.py  state.py  util.py
python/test/: requirements.txt  test_set.py
python/training/: k_means.py  k_means_cuml.py  log_wandb.py  requirements.txt
resources/: .gitignore
temp/: temp.cpp  temp.py
test/: lib.cpp  lib.hpp  test.cpp  testset.cpp
tests/: tests.cpp
update_lossless/: update_lossless.cpp
